add tweet schema

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -39,5 +39,14 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script>
+      <link
+        rel='stylesheet'
+        href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.3.0/css/all.min.css'
+        integrity='sha512-UJqci0ZyYcQ0AOJkcIkUCxLS2L6eNcOr7ZiypuInvEhO9uqIDi349MEFrqBzoy1QlfcjfURHl+WTMjEdWcv67A=='
+        crossorigin='anonymous'
+        referrerpolicy='no-referrer'
+      />;
+    </script>
   </body>
 </html>
